# marimobean

./: .gitignore  README.md  dash.py  dash_v2.py  expense_comparison_annual.py  fastnetworth.py  life_expectancy.py  main.py  missing_prices.py  networth.py  pnl.py  pyproject.toml  spending.py  summator.py  taxes.py  template.py
soa-lifetables/: t2581.xls  t2582.xls  t2583.xls  t2584.xls
