[project]
name = "marimo-notebooks"
version = "0.1.0"
description = "Marimo notebooks for exploring beancount data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "beancount>=3.2.0",
    "beancount-reds-plugins>=0.4.0",
    "beanquery>=0.2.0",
    "great-tables>=0.21.0",
    "marimo>=0.20.4",
    "numpy-financial>=1.0.0",
    "polars>=1.39.0",
    "python-dateutil>=2.9.0.post0",
]
